--- a/Øljeopardy/appsettings.json
+++ b/Øljeopardy/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Øljeopardy;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Oljeopardy;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "IncludeScopes": false,
