--- a/Øljeopardy/Oljeopardy.csproj
+++ b/Øljeopardy/Oljeopardy.csproj
@@ -6,6 +6,11 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Properties\PublishProfiles\Oljeopardy test.pubxml" />
+    <None Remove="Properties\PublishProfiles\Øljeopardy - Web Deploy.pubxml" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.1.1" />
