--- a/Øljeopardy/Properties/launchSettings.json
+++ b/Øljeopardy/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "launchUrl": "https://localhost:44309/",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_preventHostingStartup": "True"
       }
     },
     "Øljeopardy": {
