--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "3.1.0"
+  },
+  "dependencies": {
+    "@aspnet/signalr-client": "^1.0.0-alpha2-final"
   }
 }
